--- a/GamerShop.API/GamerShop.API.csproj
+++ b/GamerShop.API/GamerShop.API.csproj
@@ -14,4 +14,8 @@
     <Folder Include="Controllers\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\GamerShop.Core\GamerShop.Core.csproj" />
+  </ItemGroup>
+
 </Project>
